fixed scrollbar

--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -41,7 +41,7 @@
     color: rgb(255, 255, 255);
 }
 ::-webkit-scrollbar {
-    background-color: var(--dark-grey);
+    background-color: transparent;
     width: 0.5vw;
 }
 ::-webkit-scrollbar-thumb {
